--- a/OGLib/OGLib.csproj
+++ b/OGLib/OGLib.csproj
@@ -92,10 +92,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Effects\Refraction.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Maps\Map.cs" />
+    <Compile Include="Maps\MapLayer.cs" />
+    <Compile Include="Maps\MapPart.cs" />
+    <Compile Include="Particles\Particle.cs" />
+    <Compile Include="Particles\ParticleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Pool.cs" />
+    <Compile Include="Utilities\SourceRectangle.cs" />
+    <Compile Include="Utilities\Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Utilities\" />
+    <Folder Include="Scripting\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
